test/force-app/main/default/objects/Customer__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secuderabad</fullName>
            </value>
            <value>
                <fullName>Ameerpet</fullName>
            </value>
            <value>
                <fullName>Hytech city</fullName>
            </value>
            <value>
                <fullName>Madhapur</fullName>
            </value>
            <value>
                <fullName>Kukatpalli</fullName>
            </value>
            <value>
                <fullName>Marina Beach</fullName>
            </value>
            <value>
                <fullName>Tambram</fullName>
            </value>
            <value>
                <fullName>Kottam</fullName>
            </value>
            <value>
                <fullName>Kanya Kumari</fullName>
            </value>
            <value>
                <fullName>RCPuram</fullName>
            </value>
            <value>
                <fullName>BTM Layout</fullName>
            </value>
            <value>
                <fullName>Elecronic city</fullName>
            </value>
            <value>
                <fullName>JayaNagar</fullName>
            </value>
            <value>
                <fullName>Banashenkari</fullName>
            </value>
            <value>
                <fullName>Contonment</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Parlament</fullName>
            </value>
            <value>
                <fullName>Rasrapati Bhavan</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>Taj Mahal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>