test/force-app/main/default/objects/Customer__c/fields/EST_Year__c.field-meta.xml
<CustomField>
    <fullName>EST_Year__c</fullName>
    <label>EST Year</label>
    <type>Date</type>
</CustomField>