test/force-app/main/default/objects/Customer__c/fields/No_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Employees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If Type is Person then number of employees is 0
else its a required field</description>
    <label>No Of Employees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>