test/force-app/main/default/objects/Customer__c/fields/Pancard__c.field-meta.xml
<CustomField>
    <fullName>Pancard__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Pancard</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>