test/force-app/main/default/objects/Customer__c/fields/TanNo__c.field-meta.xml
<CustomField>
    <fullName>TanNo__c</fullName>
    <label>TanNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>